<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/MaterialLime"
            android:onClick="confirmTracking"
            android:layout_marginRight="10dp"
            android:text="@string/button_start"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="callSettings"
            android:text="@string/button_settings"
            android:layout_marginRight="10dp"
            android:background="@color/MaterialPurple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_sas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/MaterialLightBlue"
            android:onClick="callFileQueue"
            android:text="@string/button_sas" />

        <Button
            android:id="@+id/button_test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="test"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"
            android:text="TEST"
             />
    </LinearLayout>

</LinearLayout>
